fix(insert variables): removed scrollbar in nested options.

--- a/assets/scss/shared-ui/_select2.scss
+++ b/assets/scss/shared-ui/_select2.scss
@@ -1038,6 +1038,13 @@
 								}
 							}
 						}
+
+						&.select2-results__options--nested {
+							-ms-overflow-style: none;
+							&::-webkit-scrollbar {
+								display: none;
+							}
+						}
 					}
 				}
 
